# streamlit_image_annotator

./: .gitignore  CLAUDE.md  LICENSE  README.md  annotation_sidebar.py  annotator.py  config.yml  launch_app.bat  launch_viewer.bat  pyproject.toml  requirements.txt  set_config.bat  utils.py  viewer.py
.claude/skills/codereview/: SKILL.md
.claude/skills/commitpush/: SKILL.md
.claude/skills/fixreview/: SKILL.md
.claude/skills/tidyup/: SKILL.md
src/: annotator.py  utils.py  viewer.py
tests/: conftest.py  test_annotator.py  test_utils.py  test_viewer.py
